# operating-system_programming

01_producer_consumer_with_shared_memory_unnamed_semaphore/: .gitignore  201202139_assignment_01_report.odt  CMakeLists.txt  README.html  README.md  buffer.h  consumer.c  fork_test01.c  handler.c  print_functions.c  print_functions.h  produce_consumer_shared_memory.c  producer.c  producer_consumer_shared_memory.c  test02.c  test03.c  test04.c
01_producer_consumer_with_shared_memory_unnamed_semaphore/include/: buffer.h  consumer_semaphore.h  print_functions.h  producer_consumer_shared_memory_main.h  producer_semaphore.h
01_producer_consumer_with_shared_memory_unnamed_semaphore/src/: consumer_semaphore.c  producer_consumer_shared_memory_main.c  producer_semaphore.c
02_posix_timer_triggered_thread_management_system/: 201202139_assignment_02_report.odt  CMakeLists.txt  README.html  README.md
02_posix_timer_triggered_thread_management_system/include/: create_posix_timer.hpp  create_pthread.hpp  error_codes.hpp  initialize_variables.hpp  main_executor.hpp  periodic_handler.hpp  print_functions.h  print_functions.hpp  pthread_management_with_time_trigger.h  pthread_management_with_time_trigger.hpp  static_variables.hpp  thread_to_be_managed.hpp  tt_thread_register.hpp  tt_thread_wait_invocation.hpp
02_posix_timer_triggered_thread_management_system/src/: create_posix_timer.cpp  create_pthread.cpp  initialize_variables.cpp  main_executor.cpp  main_thread_executor.cpp  periodic_handler.cpp  pthread_management_with_time_trigger.cpp  static_variables.cpp  thread_to_be_managed.cpp  tt_thread_register.cpp  tt_thread_wait_invocation.cpp
03_pseudo_blood_pressure_detector/: CMakeLists.txt  README.html  README.md
03_pseudo_blood_pressure_detector/include/: error_codes_for_pth_mgr_with_time_trigger.hpp  main_executor.hpp  print_functions.hpp  pseudo_blood_pressure_detector.hpp  pthread_management_with_time_trigger.hpp  pthread_manager_with_time_trigger.hpp  user_defined_types.hpp
03_pseudo_blood_pressure_detector/include/include_pbpd/: bp_processing_thread.hpp  data_acquisition_thread.hpp  dequeue_bp_queue.hpp  enqueue_bp_queue.hpp  initialize_pbpd_variables.hpp  periodic_alarm_clock.hpp  pseudo_blood_pressure_generator.hpp  static_pbpd_variables.hpp
03_pseudo_blood_pressure_detector/include/include_ptttm/: create_posix_timer.hpp  create_pthread.hpp  initialize_ptttm_variables.hpp  static_ptttm_variables.hpp  tt_thread_register.hpp  tt_thread_wait_invocation.hpp
03_pseudo_blood_pressure_detector/src/: main_controller.cpp  main_executor.cpp  print_functions.cpp  pseudo_blood_pressure_detector.cpp  pthread_management_with_time_trigger.cpp  pthread_manager_with_time_trigger.cpp
03_pseudo_blood_pressure_detector/src/src_pbpd/: bp_processing_thread.cpp  data_acquisition_thread.cpp  dequeue_bp_queue.cpp  enqueue_bp_queue.cpp  initialize_pbpd_variables.cpp  periodic_alarm_clock.cpp  pseudo_blood_pressure_generator.cpp  static_pbpd_variables.cpp
03_pseudo_blood_pressure_detector/src/src_ptttm/: create_posix_timer.cpp  create_pthread.cpp  initialize_ptttm_variables.cpp  static_ptttm_variables.cpp  tt_thread_register.cpp  tt_thread_wait_invocation.cpp
03_pseudo_blood_pressure_detector_NONONONONONO/: CMakeLists.txt
03_pseudo_blood_pressure_detector_NONONONONONO/include/: pseudo_blood_pressure_detector.hpp  pthread_management_with_time_trigger.hpp
03_pseudo_blood_pressure_detector_NONONONONONO/src/: main_controller.cpp  print_functions.cpp  pseudo_blood_pressure_detector.cpp  pthread_management_with_time_trigger.cpp
_02/: CMakeLists.txt
_02/include/: print_functions.h
prepare_for_TEST/: 기말고사_대비_note.odt  중간고사_대비_note.odt
pthread_with_class_example/: CMakeLists.txt
pthread_with_class_example/include/: class_test.hpp  main_runner.hpp  print_functions.hpp  pthread_manager.hpp  thread_args.hpp
pthread_with_class_example/src/: class_test.cpp  main_runner.cpp  print_functions.cpp  pthread_manager.cpp
server_client_example/: client.c  server.c
server_client_example/client/: CMakeLists.txt  README.md
server_client_example/client/src/: client_old.c  client_old_02.c
server_client_example/server/: CMakeLists.txt  README.md
server_client_example/server/src/: server_old.c  server_old_02.c
test_c_folder/: CMakeLists.txt  CMakeLists_01.txt  CMakeLists_02.txt  CMakeLists_04.txt
test_c_folder/include/: alarm_example.h  posix_timer_example.h  posix_timer_example.h.gch  print_functions.h  pthread_mutex_test.h  signal_example.h
test_c_folder/src/: alarm_example.c  posix_timer_example.c  print_functions.c  pthread_mutex_test.c  signal_example.c
test_cpp_folder/: CMakeLists.txt
test_cpp_folder/include/: alarm_example.h  posix_thread_test.h  posix_timer_test.h  print_functions.h
test_cpp_folder/src/: alarm_example.cpp  cpp_random.cpp  main_thread_executor.cpp  posix_thread_test.cpp  posix_timer_test.cpp  print_functions.cpp  print_test.cpp
test_cpp_folder_02/: CMakeLists.txt
test_cpp_folder_02/include/: main_.hpp  print.hpp
test_cpp_folder_02/include/a_f/: AAA.hpp
test_cpp_folder_02/include/b_f/: BBB.hpp
test_cpp_folder_02/src/: main_.cpp  print.cpp
test_cpp_folder_02/src/a_f/: AAA.cpp
test_cpp_folder_02/src/b_f/: BBB.cpp
test_folder/: AA.c  BB.c  my_header.h  print_functions.c  print_functions.h  test01.c  test01.h  test02.c  test02.h  test_main_01.c  test_main_02.c  test_main_03.c
